argovis/templates/api-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels: 
    app: prom-api
spec:
  type: NodePort
  selector:
    component: api
    app: prom-api
  ports:
    - port: 8080
      targetPort: 8080
