argovis/templates/apix-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: apix
spec:
  type: NodePort
  selector:
    component: apix
  ports:
    - port: 8080
      targetPort: 8080
