argovis/templates/datapages-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: datapages
spec:
  type: NodePort
  selector:
    component: datapages
  ports:
    - port: 3030
      targetPort: 3000
