argovis/templates/frontend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    component: frontend
  ports:
    - port: 3000
      targetPort: 3000
