argovis/templates/keymanager-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: apikey-manager
spec:
  type: NodePort
  selector:
    component: keymanager
  ports:
    - port: 3030
      targetPort: 3030
