argovis/templates/mongo-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
