argovis/templates/ng-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ng
spec:
  type: NodePort
  selector:
    component: ng
  ports:
    - port: 3000
      targetPort: 3000
