argovis/templates/prom-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: prom
spec:
  type: NodePort
  selector:
    component: prom
  ports:
    - port: 9090
      targetPort: 9090
