argovis/templates/redis-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    component: redis
  ports:
    - port: 6379
      targetPort: 6379
