argovis/templates/inbound-api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argovis-api
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  host: argovis-api-atoc-argovis-dev.apps.containers02.colorado.edu
  to:
    kind: Service
    name: api
    weight: 100
  port:
    targetPort: 8080
status:
  ingress:
    - host: argovis-api-atoc-argovis-dev.apps.containers02.colorado.edu
      routerName: default
      routerCanonicalHostname: apps.containers02.colorado.edu
