argovis/templates/inbound-apix-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argovis-apix
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  host: argovis-apix-atoc-argovis-dev.apps.containers02.colorado.edu
  to:
    kind: Service
    name: apix
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
status:
  ingress:
    - host: argovis-apix-atoc-argovis-dev.apps.containers02.colorado.edu
      routerName: default
      routerCanonicalHostname: apps.containers02.colorado.edu
