argovis/templates/inbound-datapages-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argovis-datapages
spec:
  host: argovis-datapages-atoc-argovis-dev.apps.containers02.colorado.edu
  to:
    kind: Service
    name: datapages
    weight: 100
  port:
    targetPort: 3000
status:
  ingress:
    - host: argovis-datapages-atoc-argovis-dev.apps.containers02.colorado.edu
      routerName: default
      routerCanonicalHostname: apps.containers02.colorado.edu
