argovis/templates/inbound-frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argovis-frontend
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  host: argovis-frontend-atoc-argovis-dev.apps.containers02.colorado.edu
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
status:
  ingress:
    - host: argovis-frontend-atoc-argovis-dev.apps.containers02.colorado.edu
      routerName: default
      routerCanonicalHostname: apps.containers02.colorado.edu
