argovis/templates/inbound-keymanager-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apikey-manager
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  host: argovis-apikey-manager-atoc-argovis-dev.apps.containers02.colorado.edu
  to:
    kind: Service
    name: apikey-manager
    weight: 100
  port:
    targetPort: 3030
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
status:
  ingress:
    - host: argovis-apikey-manager-atoc-argovis-dev.apps.containers02.colorado.edu
      routerName: default
      routerCanonicalHostname: apps.containers02.colorado.edu
