argovis/templates/mongo-networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-ingress
spec:
  podSelector:
    matchLabels:
      app: mongo
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: api
    ports:
      - port: 27017
